--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Java</title>
 </head>
 <body>
-    <script src="./java.js"></script>
+    <script src="./java.js">
+        // mmm 
+    </script>
 </body>
 </html>
